Adding Kafka Consumer Service skeleton

--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,9 @@
     </properties>
 
     <modules>
+        <module>datamodel</module>
         <module>domainlogic</module>
+        <module>webservice</module>
     </modules>
 
     <dependencyManagement>
