--- a/domainlogic/pom.xml
+++ b/domainlogic/pom.xml
@@ -22,6 +22,12 @@
             <version>0.9.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j_version}</version>
+        </dependency>
+
     </dependencies>
 
 </project>
