--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <log4j_version>1.2.17</log4j_version>
         <hsqldb_version>2.0.0</hsqldb_version>
         <javaee_web_api_version>6.0</javaee_web_api_version>
+        <slf4j.version>1.7.13</slf4j.version>
     </properties>
 
     <modules>
